fix contact button alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9045,9 +9045,6 @@ Onepage Homepages --------------------*/
 #summary {
   display: none; }
 
-#summary p {
-  text-align: center; }
-
 #summary p:first-child {
   font-size: 1.5em; }
 
